@@ -1,3 +1,8 @@
+Wed Mar 04 16:35:16 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/unittests/imgseek.py: Add buckets parameter, and some
+	  useful commented out debug prints.
+
 Wed Mar 04 16:34:22 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/fieldactions.py: add "buckets" parameter to IMGSEEK action,
